--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,13 +1,23 @@
 <!-- BEGIN: Header-->
-<nav class="header-navbar navbar-expand-lg navbar navbar-with-menu floating-nav navbar-light navbar-shadow">
+<body class="vertical-layout vertical-menu-modern 2-columns footer-static pace-done navbar-static menu-expanded">
+<nav class="header-navbar navbar-expand-lg navbar navbar-with-menu navbar-light navbar-shadow fixed-top">
   <div class="navbar-wrapper">
     <div class="navbar-container content">
       <div class="navbar-collapse" id="navbar-mobile">
         <div class="mr-auto float-left bookmark-wrapper d-flex align-items-center">
-          <ul class="nav navbar-nav">
+          <div class="navbar-header expanded">
+            <ul class="nav navbar-nav flex-row">
+              <li class="nav-item mr-auto"><a class="navbar-brand" href="../../../html/ltr/vertical-menu-template/index.html">
+                  <div class="brand-logo"></div>
+                  <h2 class="brand-text mb-0">Vuexy</h2></a></li>
+              <li class="nav-item nav-toggle"><a class="nav-link modern-nav-toggle pr-0 shepherd-modal-target" data-toggle="collapse"><i class="icon-x d-block d-xl-none font-medium-4 primary toggle-icon feather icon-disc"></i><i class="toggle-icon font-medium-4 d-none d-xl-block collapse-toggle-icon primary feather icon-disc" data-ticon="icon-disc" tabindex="0"></i></a></li>
+            </ul>
+          </div>
+          <!-- <ul class="nav navbar-nav">
             <li class="nav-item mobile-menu d-xl-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i
               class="ficon feather icon-menu"></i></a></li>
-          </ul>
+          </ul> -->
+         
         </div>
         <ul class="nav navbar-nav float-right">
           <li class="dropdown dropdown-user nav-item">
@@ -31,4 +41,5 @@
     </div>
   </div>
 </nav>
+</body>
 <!-- END: Header-->
