--- a/src/app/modules/not-found/notfound.component.html
+++ b/src/app/modules/not-found/notfound.component.html
@@ -1,6 +1,6 @@
 
 
-    <!-- BEGIN: Content-->
+  <body class="vertical-layout vertical-menu-modern 1-column  navbar-floating footer-static bg-full-screen-image  blank-page blank-page" data-open="click" data-menu="vertical-menu-modern" data-col="1-column">
     <div class="app-content content">
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
@@ -20,7 +20,7 @@
                                         paraphonic unassessable foramination Caulopteris worral Spirophyton encrimson esparcet aggerate chondrule
                                         restate whistler shallopy biosystematy area bertram plotting unstarting quarterstaff.
                                     </p>
-                                    <button class="btn btn-primary btn-lg mt-2" (click)="gotobackpage()" >Back to Home</button>
+                                    <button class="btn btn-primary btn-lg mt-2" (click)="gotobackpage()">Back to Home</button>
                                 </div>
                             </div>
                         </div>
@@ -31,7 +31,5 @@
             </div>
         </div>
     </div>
-    <!-- END: Content-->
 
-
- 
+</body>
