working on forgot password module.

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -48,9 +48,9 @@
                     </fieldset>
                     <div class="form-group d-flex justify-content-between align-items-center">
                       <div class="col-md-12 col-sm-12">
-                        <!-- <div class="text-right">
+                        <div class="text-right">
                           <a routerLink="/forgot-password" class="card-link">Forgot Password?</a>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                     <!-- <a href="auth-register.html" class="btn btn-outline-primary float-left btn-inline">Register</a> -->
