--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -8,30 +8,61 @@
           </div>
           <div class="col-lg-6 col-12 p-0">
             <div class="card rounded-0 mb-0 px-2 py-1">
-              <div class="card-header pb-1">
+              <div   class="card-header pb-1">
                 <div class="card-title">
                   <h4 class="mb-0">Recover your password</h4>
                 </div>
               </div>
-              <p class="px-2 mb-0">Please enter your email address and we'll send you instructions on how to reset your password.</p>
+              <p   class="px-2 mb-0">Please enter your email address and we'll send you instructions on how to reset your password.</p>
               <div class="card-content">
                 <div class="card-body">
-                  <form action="index.html">
+                  <form id="reset-form" [formGroup]="forgotpasswordForm">
                     <div class="form-label-group">
-                      <input type="email" id="inputEmail" class="form-control" placeholder="Email">
-                      <label for="inputEmail">Email</label>
+                      <input type="email" id="inputEmail" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" class="form-control" placeholder="Email">
+                      <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)">
+                        <div class="text-danger" *ngIf="f.email.errors.required">Email is required</div>
+                        <div class="text-danger" *ngIf="f.email.errors.email">Email not valid</div>
+                      </div>
+                    </div>
+                    <div class="float-md-left d-block mb-1">
+                      <a routerLink="/login" class="btn btn-outline-primary btn-block px-75">Back to Login</a>
+                    </div>
+                    <div class="float-md-right d-block mb-1">
+                      <button (click)="ForgotPassword()" type="submit" class="btn btn-primary btn-block px-75" [disabled]="!forgotpasswordForm.valid" [ngClass]="{'disable':!forgotpasswordForm.valid}">
+                        <span *ngIf="this.submitted === true">
+                          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> loading...
+                        </span>
+                        <span *ngIf="this.submitted === false"> Recover Password</span>
+                      </button>
+                    </div>
+                    <div class="alert alert-danger w-100 mt-2" *ngIf="errorMessage" role="alert">
+                      {{errorMessage}}
+                    </div>
+                    <div class="alert alert-danger w-100 mt-2" *ngIf="validationMessage.length >= 1" role="alert">
+                      <ul>
+                        <li *ngFor="let message of validationMessage;">{{message}}</li>
+                      </ul>
                     </div>
                   </form>
-                  <div class="float-md-left d-block mb-1">
-                    <a routerLink="/login" class="btn btn-outline-primary btn-block px-75">Back to Login</a>
-                  </div>
-                  <div class="float-md-right d-block mb-1">
-                    <a href="#" class="btn btn-primary btn-block px-75">Recover Password</a>
-                  </div>
+
+                  <form id="confirmation" class="r-pwd-form-b validate-form" style="display: none">
+                    <span class="r-pwd-form-b-title"> Reset Password </span>
+                    <span class="r-pwd-form-b-caption">
+                    <p>Please check your email to reset password.</p>
+                  </span>
+                    <div class="container-login100-form-btn mb-1">
+                      <a routerLink="/login" class="btn-bg" role="button">BACK TO LOG IN</a>
+                    </div>
+                  </form>
+              
                 </div>
               </div>
             </div>
           </div>
+
+
+
+          
         </div>
       </div>
     </div>
