--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -21,8 +21,8 @@
           <li class="dropdown dropdown-user nav-item">
             <a class="dropdown-toggle nav-link dropdown-user-link" data-toggle="dropdown">
               <div class="user-nav d-sm-flex d-none">
-                <span class="user-name text-bold-600">{{currentuser.response.userInfo.firstName}} {{currentuser.response.userInfo.lastName}}</span>
-                <span class="user-status">{{currentuser.response.userInfo.email}}</span>
+                <span class="user-name text-bold-600">{{currentuser?.response?.userInfo?.firstName}} {{currentuser?.response?.userInfo?.lastName}}</span>
+                <span class="user-status">{{currentuser?.response?.userInfo?.email}}</span>
               </div>
               <span><img class="round" src="assets/img/noavatar.png" alt="avatar" height="40" width="40"></span>
             </a>
