working on add ,edit one key.

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -99,7 +99,7 @@
                     <span class="d-ex-link"><i class="fa fa-external-link" aria-hidden="true"></i></span>
                 </a>
                 </div>
-                <div  *ngIf="!publisher.domain" class="d-flex">
+                <div  *ngIf="!publisher?.domain" class="d-flex">
                   N/A
                 </div>
               </td>
