--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -55,14 +55,40 @@
                     </div>
                   </div>
                     <div class="row">
-                      <div class="col-12 col-sm-6">
+                      <div class="col-12 col-sm-12">
                         <div class="form-group">
-                          <div class="controls">
-                            <label>Publisher Name	</label>
-                            <input type="text" class="form-control" placeholder="Publisher Name" formControlName="publisherName">
-                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('publisherName').touched) && publisherForm.controls['publisherName'].hasError('required')">Publisher Name Required</div>
+                        <div class="row">
+                            <div class="col-12 col-sm-4">
+                              <div class="controls">
+                                <label>Publisher Name	</label>
+                                <input type="text" class="form-control" placeholder="Publisher Name" formControlName="publisherName">
+                                <div class="text-danger" *ngIf="(submitted || publisherForm.get('publisherName').touched) && publisherForm.controls['publisherName'].hasError('required')">Publisher Name Required</div>
+                              </div>
+                            </div>
+                          <div class="col-12 col-sm-4">
+                            <div class="controls">
+                              <label>Domain	</label>
+                              <input type="text" class="form-control" placeholder="Domain" formControlName="domain">
+                              <div class="text-danger">
+                                  <div  *ngIf="(submitted || publisherForm.get('domain').touched) && publisherForm.controls['domain'].hasError('required')">Please Enter Domain</div>
+                                  <div  *ngIf="f?.domain?.errors?.pattern">Please Enter Valid Domain</div>
+                              </div>
+                            </div>  
+                          </div>
+                          <div class="col-12 col-sm-4">
+                            <div class="controls">
+                              <label>Home Domain</label>
+                              <input type="text" class="form-control" placeholder="Home Domain" formControlName="homeDomain">
+                              <div class="text-danger">
+                                  <div  *ngIf="(submitted || publisherForm.get('homeDomain').touched) && publisherForm.controls['homeDomain'].hasError('required')">Please Enter Home Domain</div>
+                                  <div  *ngIf="f?.homeDomain?.errors?.pattern">Please Enter Valid Home Domain</div>
+                              </div>
+                            </div>  
                           </div>
                         </div>
+                        </div>
+                      </div>
+                      <div class="col-12 col-sm-6">
                         <div class="form-group">
                           <div class="controls">
                             <label>Contact Name	</label>
@@ -80,17 +106,6 @@
                         </div>
                       </div>
                       <div class="col-12 col-sm-6">
-                        <div class="form-group">
-                          <div class="controls">
-                            <label>Domain	</label>
-                            <input type="text" class="form-control" placeholder="Domain" formControlName="domain">
-                            <div class="text-danger">
-                                <div  *ngIf="(submitted || publisherForm.get('domain').touched) && publisherForm.controls['domain'].hasError('required')">Please Enter Domain</div>
-                                <div  *ngIf="f?.domain?.errors?.pattern">Please Enter Valid Domain</div>
-                            </div>
-
-                          </div>
-                        </div>
                         <div class="form-group">
                           <label>Status</label>
                           <select formControlName="isActive" (change)="onChange($event.target.value)"  class="form-control">
