--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -109,7 +109,7 @@
                         <div class="form-group">
                           <label>Status</label>
                           <select formControlName="isActive" (change)="onChange($event.target.value)"  class="form-control">
-                            <option value="1" selected></option>
+                            <option  selected></option>
                             <option *ngFor="let status of Publisherstatus" [value]="status.value">{{status.name}}</option>
 
                           </select>
