--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -236,7 +236,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
+          <!-- <div class="col-12 col-md-6">
             <div class="card">
               <div class="card-content" style="height: 200px;">
                 <div class="card-body">
@@ -249,7 +249,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="manageheader"  rows="3" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -272,7 +271,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="sidebar1" rows="4" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -295,7 +293,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="sidebar2" rows="4" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -318,7 +315,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="sidebar3" rows="4" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -341,7 +337,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="sidebar4" rows="4" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -364,7 +359,6 @@
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
                           <div class="controls">
-                            <!-- <label>Header</label> -->
                             <textarea class="form-control" formControlName="leaderboard1" rows="3" placeholder="Paste Code here"></textarea>
                           </div>
                         </div>
@@ -382,7 +376,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="col-12 d-flex flex-sm-row flex-column justify-content-end mt-1">
           <button *ngIf="this.submitted === true" type="submit" [disabled]="!publisherForm.valid" [ngClass]="{'disable':!publisherForm.valid }" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">
