--- a/src/app/modules/publishers/publishers.component.html
+++ b/src/app/modules/publishers/publishers.component.html
@@ -204,7 +204,7 @@
                         </div>
                         <!-- theme info end -->
                         <!-- permissions start -->
-                        <div class="col-12">
+                        <!-- <div class="col-12">
                             <div class="card">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Ad Manager Header Script Tag
@@ -214,11 +214,11 @@
                                    {{manageheader}}
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- permissions end -->
 
                         <!-- Sidebar 1 start -->
-                        <div class="col-12 col-md-3">
+                        <!-- <div class="col-12 col-md-3">
                             <div class="card ">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Sidebar 1
@@ -228,11 +228,11 @@
                                     {{sidebar1}}
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Sidebar 1 End -->
 
                         <!-- Sidebar 2 start -->
-                        <div class="col-12 col-md-3">
+                        <!-- <div class="col-12 col-md-3">
                             <div class="card ">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Sidebar 2
@@ -242,11 +242,11 @@
                                    {{sidebar2}}
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Sidebar 2 End -->
 
                         <!-- Sidebar 3 start -->
-                        <div class="col-12 col-md-3">
+                        <!-- <div class="col-12 col-md-3">
                             <div class="card ">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Sidebar 3
@@ -256,11 +256,11 @@
                                    {{sidebar3}}
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Sidebar 3 End -->
 
                         <!-- Sidebar 4 start -->
-                        <div class="col-12 col-md-3">
+                        <!-- <div class="col-12 col-md-3">
                             <div class="card ">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Sidebar 4
@@ -270,12 +270,12 @@
                                     {{sidebar4}}
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Sidebar 4 End -->
 
 
                         <!-- Leaderboard start -->
-                        <div class="col-12">
+                        <!-- <div class="col-12">
                             <div class="card">
                                 <div class="card-header border-bottom mx-2 px-0">
                                     <h6 class="border-bottom py-1 mb-0 font-medium-2">Leaderboard 1
@@ -289,7 +289,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Leaderboard end -->
                     </div>
                 </section>
