--- a/src/app/modules/publishers/publishers.component.html
+++ b/src/app/modules/publishers/publishers.component.html
@@ -62,6 +62,18 @@
                                                     <td class="font-weight-bold">Contact Info</td>
                                                     <td>{{publisherdata?.email}}</td>
                                                 </tr>
+                                                <tr>
+                                                    <td class="font-weight-bold">Registered Date</td>
+                                                    <td>
+                                                        <span *ngIf="publisherdata?.registeredDate" class="text-superscript">
+                                                            {{publisherdata?.registeredDate  | date: "d"}}
+                                                            <sup>{{(publisherdata?.registeredDate | date: "d") | dateSuffix}}</sup>
+                                                            {{publisherdata?.registeredDate  | date: "MMM"}},
+                                                            {{publisherdata?.registeredDate  | date: "yyyy"}}
+                                                        </span>
+                                                    </td>
+                                                    <!-- <td>28<sup>th</sup> Apr, 2020</td> -->
+                                                </tr>
 
                                             </table>
                                         </div>
@@ -84,6 +96,22 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td class="font-weight-bold">Privacy Policy</td>
+                                                    <td>{{publisherdata?.privacyPolicy}}
+                                                        <a [href]="redirectToPage(publisherdata?.privacyPolicy)" target="_blank">
+                                                            <span class="d-ex-link"><i class="fa fa-external-link" aria-hidden="true"></i></span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="font-weight-bold">Terms Of Use</td>
+                                                    <td>{{publisherdata?.termsOfUse}}
+                                                        <a [href]="redirectToPage(publisherdata?.termsOfUse)" target="_blank">
+                                                            <span class="d-ex-link"><i class="fa fa-external-link" aria-hidden="true"></i></span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr>
                                                     <td class="font-weight-bold">Status</td>
                                                     <td>
                                                         <div *ngIf="publisherdata?.isActive == 1" class="chip chip-success">
@@ -98,18 +126,7 @@
                                                           </div>
                                                     </td>
                                                 </tr>
-                                                <tr>
-                                                    <td class="font-weight-bold">Registered Date</td>
-                                                    <td>
-                                                        <span *ngIf="publisherdata?.registeredDate" class="text-superscript">
-                                                            {{publisherdata?.registeredDate  | date: "d"}}
-                                                            <sup>{{(publisherdata?.registeredDate | date: "d") | dateSuffix}}</sup>
-                                                            {{publisherdata?.registeredDate  | date: "MMM"}},
-                                                            {{publisherdata?.registeredDate  | date: "yyyy"}}
-                                                        </span>
-                                                    </td>
-                                                    <!-- <td>28<sup>th</sup> Apr, 2020</td> -->
-                                                </tr>
+                                               
                            
                                             </table>
                                         </div>
