--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -27,7 +27,7 @@
               <span><img class="round" src="assets/img/noavatar.png" alt="avatar" height="40" width="40"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
-              <a routerLink="/account-settings"  class="dropdown-item"><i class="feather icon-settings"></i> Account Settings</a>
+              <a routerLink="/account-settings"  class="dropdown-item"><i class="feather icon-settings"></i> Visual Ad settings</a>
               <div class="dropdown-divider"></div>
               <a  data-toggle="modal" data-target="#changeAdminPassword"  class="dropdown-item"><i class="feather icon-lock"></i> Change Password</a>
               <div class="dropdown-divider"></div>
